@@ -152,6 +152,7 @@ gen_personal_data($tpl);
 
 gen_page_message($tpl);
 
+
 $tpl->assign(
 	array(
 		'YOUR_CHART' => tr('Your Chart'),
@@ -176,6 +177,9 @@ $tpl->assign(
 		'TR_FAX' => tr('Fax'),
 		'TR_EMAIL' => tr('Email'),
 		'TR_PERSONAL_DATA' => tr('Personal Data'),
+		'TR_CAPCODE' => tr('Security code'),
+		'TR_IMGCAPCODE_DESCRIPTION' => tr('(To avoid abuse, we ask you to write the combination of letters on the above picture into the field "Security code")'),
+		'TR_IMGCAPCODE' => '<img src="/imagecode.php" width="' . Config::get('LOSTPASSWORD_CAPTCHA_WIDTH') . '" height="' . Config::get('LOSTPASSWORD_CAPTCHA_HEIGHT') . '" border="0" alt="captcha image">',
 		'THEME_CHARSET' => tr('encoding')
 	)
 );
