@@ -107,6 +107,12 @@ gen_reseller_menu($tpl, Config::get('RESELLER_TEMPLATE_PATH') . '/menu_orders.tp
 
 gen_logged_from($tpl);
 
+$coid = Config::exists('CUSTOM_ORDERPANEL_ID') ? Config::get('CUSTOM_ORDERPANEL_ID'): '';
+
+$url = Config::get('BASE_SERVER_VHOST_PREFIX') . Config::get('BASE_SERVER_VHOST') . '/orderpanel/index.php?';
+$url .= 'coid='.$coid;
+$url .= '&amp;user_id=' . $_SESSION['user_id'];
+
 $tpl->assign(
 	array(
 		'TR_MANAGE_ORDERS' => tr('Manage Orders'),
@@ -114,7 +120,7 @@ $tpl->assign(
 		'TR_HEADER' => tr('Header'),
 		'TR_PREVIEW' => tr('Preview'),
 		'TR_IMPLEMENT_INFO' => tr('Implementation URL'),
-		'TR_IMPLEMENT_URL' => Config::get('BASE_SERVER_VHOST_PREFIX') . Config::get('BASE_SERVER_VHOST') . '/orderpanel/index.php?user_id=' . $_SESSION['user_id'],
+		'TR_IMPLEMENT_URL' => $url,
 		'TR_FOOTER' => tr('Footer')
 	)
 );
