@@ -1,0 +1,32 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+	<head>
+		<title>{PAGE_TITLE}</title>
+		<meta name="robots" content="nofollow, noindex">
+		<meta http-equiv="Content-Type" content="text/html; charset={THEME_CHARSET}">
+		<meta http-equiv="Content-Style-Type" content="text/css">
+		<meta http-equiv="Content-Script-Type" content="text/javascript">
+		<link href="{THEME_COLOR_PATH}/css/ispcp.css" rel="stylesheet" type="text/css">
+	</head>
+	<body>
+		<table cellpadding="0" cellspacing="0" width="100%" style="height:100%">
+			<tr>
+				<td style="vertical-align:middle; text-align:center;">
+					<table width="453" align="center" style="border:solid 1px #CCCCCC;" cellpadding="0" cellspacing="0">
+						<tr>
+							<td colspan="7" width="453" height="69" class="loginTop">&nbsp;</td>
+						</tr>
+						<tr>
+							<td align="center"><br /><strong>{ORDER_STATUS_MESSAGE}</strong><br /><br /></td>
+						</tr>
+					</table>
+					<table width="453" align="center">
+						<tr>
+							<td align="right" class="login">Powered by <a class="login" href="http://www.isp-control.net" target="_blank">ispCP Omega</a></td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+		</table>
+	</body>
+</html>
